--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -224,7 +224,7 @@ main {
       position: absolute;
       right: 6vw;
     }
-    
+
     span:last-child {
       position: absolute;
       left: 6vw;
@@ -300,11 +300,32 @@ main {
     padding-bottom: 10vh;
     max-width: 100ch;
     margin: auto;
+    position: relative;
+
+    .text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: max-content;
+      transform: translate(-50%, -50%) rotate(180deg);
+      font-size: 15vw;
+      font-weight: bold;
+      opacity: 0.1;
+      user-select: none;
+    }
+
+    @media screen and (max-width: 414px) {
+      .text {
+        transform: translate(-50%, -70%) rotate(180deg);
+      }
+    }
 
     figure {
       width: 100%;
       height: 50vh;
       margin: 0;
+      position: relative;
+      z-index: 1;
 
       img {
         object-fit: cover;
