Fix projects' paragraphs

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -339,8 +339,6 @@ main {
     p {
       opacity: 0;
       transform: translateY(30px);
-      width: 50%;
-      padding-right: 1em;
     }
 
     & > div:first-of-type {
@@ -360,6 +358,11 @@ main {
         width: 50%;
         opacity: 0;
         transform: translateY(30px);
+
+        p {
+          width: 50%;
+          padding-right: 1em;
+        }
 
         .line {
           position: absolute;
