Add no pointers events

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -311,6 +311,7 @@ main {
       font-weight: bold;
       opacity: 0;
       user-select: none;
+      pointer-events: none;
     }
 
     @media screen and (max-width: 414px) {
