--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -161,6 +161,7 @@ nav {
     position: fixed;
     top: 6vh;
     z-index: 2;
+    cursor: pointer;
     transform: translateY(30px);
     opacity: 0;
 
