--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,62 +88,6 @@ h3 {
           transform: translateY(30px);
 }
 
-.circle-container {
-  position: absolute;
-  top: 50vh;
-  left: 50%;
-  -webkit-transform: translate(-95%, -50%);
-          transform: translate(-95%, -50%);
-  height: 45vw;
-  width: 45vw;
-}
-
-.circle-container .circle {
-  border: 1px solid var(--white);
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-  opacity: 0.1;
-  -webkit-transform: scale(0);
-          transform: scale(0);
-}
-
-.vertical-line {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%) scaleY(0);
-          transform: translateX(-50%) scaleY(0);
-  width: 1px;
-  height: 100vh;
-  background-color: var(--white);
-  opacity: 0.1;
-}
-
-.horizontal-line {
-  position: absolute;
-  top: 65vh;
-  left: 0;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  width: 100vw;
-  height: 1px;
-  background-color: var(--white);
-  opacity: 0.1;
-}
-
-@media screen and (max-width: 834px) {
-  .circle-container {
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    height: 85vw;
-    width: 85vw;
-  }
-  .horizontal-line {
-    top: 50vh;
-  }
-}
-
 nav {
   padding-right: 2vw;
   padding-left: 2vw;
@@ -228,6 +172,62 @@ header {
   position: relative;
   padding-left: 10vw;
   padding-right: 10vw;
+}
+
+header .circle-container {
+  position: absolute;
+  top: 50vh;
+  left: 50%;
+  -webkit-transform: translate(-95%, -50%);
+          transform: translate(-95%, -50%);
+  height: 45vw;
+  width: 45vw;
+}
+
+header .circle-container .circle {
+  border: 1px solid var(--white);
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
+header .vertical-line {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%) scaleY(0);
+          transform: translateX(-50%) scaleY(0);
+  width: 1px;
+  height: 100vh;
+  background-color: var(--white);
+  opacity: 0.1;
+}
+
+header .horizontal-line {
+  position: absolute;
+  top: 65vh;
+  left: 0;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  width: 100vw;
+  height: 1px;
+  background-color: var(--white);
+  opacity: 0.1;
+}
+
+@media screen and (max-width: 834px) {
+  header .circle-container {
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    height: 85vw;
+    width: 85vw;
+  }
+  header .horizontal-line {
+    top: 50vh;
+  }
 }
 
 header img {
