--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -591,6 +591,35 @@ header .socials a:hover svg path {
   position: relative;
 }
 
+.contact .circle-container {
+  position: absolute;
+  top: 50vh;
+  left: 50%;
+  -webkit-transform: translate(-95%, -50%);
+          transform: translate(-95%, -50%);
+  height: 45vw;
+  width: 45vw;
+}
+
+.contact .circle-container .circle {
+  border: 1px solid var(--white);
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
+@media screen and (max-width: 834px) {
+  .contact .circle-container {
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    height: 85vw;
+    width: 85vw;
+  }
+}
+
 .contact p {
   font-size: 4.5vw;
   -webkit-transform: translateY(30px);
