--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -208,7 +208,7 @@ header {
     .horizontal-line {
       top: 50vh;
     }
-  }  
+  }
 
   img {
     max-width: 15vw;
@@ -513,6 +513,32 @@ header {
 .contact {
   margin-top: 20vh;
   position: relative;
+
+  .circle-container {
+    position: absolute;
+    top: 50vh;
+    left: 50%;
+    transform: translate(-95%, -50%);
+    height: 45vw;
+    width: 45vw;
+
+    .circle {
+      border: 1px solid var(--white);
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      opacity: 0.1;
+      transform: scale(0);
+    }
+  }
+
+  @media screen and (max-width: 834px) {
+    .circle-container {
+      transform: translate(-50%, -50%);
+      height: 85vw;
+      width: 85vw;
+    }
+  }
 
   p {
     font-size: 4.5vw;
