Fix nav being unclickable

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -127,6 +127,7 @@ nav {
     text-transform: uppercase;
     letter-spacing: 0.05em;
     writing-mode: vertical-lr;
+    z-index: 1;
   }
 
   div:nth-child(3) {
@@ -137,6 +138,7 @@ nav {
     text-transform: uppercase;
     letter-spacing: 0.05em;
     writing-mode: vertical-lr;
+    z-index: 1;
   }
 }
 
