--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,7 @@ nav div:nth-child(2) {
   -webkit-writing-mode: vertical-lr;
       -ms-writing-mode: tb-lr;
           writing-mode: vertical-lr;
+  z-index: 1;
 }
 
 nav div:nth-child(3) {
@@ -146,6 +147,7 @@ nav div:nth-child(3) {
   -webkit-writing-mode: vertical-lr;
       -ms-writing-mode: tb-lr;
           writing-mode: vertical-lr;
+  z-index: 1;
 }
 
 main {
