Make the header img visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,7 @@ header img {
       -ms-user-select: none;
           user-select: none;
   pointer-events: none;
+  z-index: 1;
   opacity: 0;
 }
 
