--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,36 @@ html {
   scroll-behavior: smooth;
 }
 
+:root {
+  --background: #f2f2f2;
+  --primary-color: #333333;
+  --secondary-color: #dbcf89;
+  --secondary-color-alt: #f0e9c0;
+  --font: tenez, serif;
+}
+
+body[data-theme="dark"] {
+  --background: #181818;
+  --primary-color: #f2f2f2;
+}
+
+body[data-theme="dark"] #wolf {
+  display: none;
+}
+
+body[data-theme="dark"] #angry {
+  display: block;
+}
+
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   background-color: var(--background);
   font-family: var(--font);
-  color: var(--white);
+  color: var(--primary-color);
+  -webkit-transition: color 0.4s, background-color 0.4s, fill 0.4s;
+  transition: color 0.4s, background-color 0.4s, fill 0.4s;
 }
 
 *,
@@ -20,22 +43,13 @@ body {
 }
 
 ::-moz-selection {
-  background: var(--secondary_alt);
+  background: var(--secondary-color-alt);
   color: whitesmoke;
 }
 
 ::selection {
-  background: var(--secondary_alt);
+  background: var(--secondary-color-alt);
   color: whitesmoke;
-}
-
-:root {
-  --background: #181818;
-  --white: #eeeeee;
-  --black: #333333;
-  --secondary: #f93700;
-  --secondary_alt: #ff501e;
-  --font: tenez, serif;
 }
 
 p {
@@ -101,11 +115,11 @@ nav a {
 }
 
 nav a:hover {
-  color: var(--secondary);
+  color: var(--secondary-color);
 }
 
 nav .current {
-  color: var(--secondary);
+  color: var(--secondary-color);
 }
 
 nav div:nth-child(1) {
@@ -118,7 +132,7 @@ nav div:nth-child(1) {
 
 nav div:nth-child(1) svg g {
   font-size: 30px;
-  fill: var(--white);
+  fill: var(--primary-color);
 }
 
 nav div:nth-child(2) {
@@ -187,7 +201,7 @@ header .circle-container {
 }
 
 header .circle-container .circle {
-  border: 1px solid var(--white);
+  border: 1px solid var(--primary-color);
   border-radius: 50%;
   width: 100%;
   height: 100%;
@@ -204,7 +218,7 @@ header .vertical-line {
           transform: translateX(-50%) scaleY(0);
   width: 1px;
   height: 100vh;
-  background-color: var(--white);
+  background-color: var(--primary-color);
   opacity: 0.1;
 }
 
@@ -216,7 +230,7 @@ header .horizontal-line {
           transform: scaleX(0);
   width: 100vw;
   height: 1px;
-  background-color: var(--white);
+  background-color: var(--primary-color);
   opacity: 0.1;
 }
 
@@ -241,6 +255,10 @@ header img {
   pointer-events: none;
   z-index: 1;
   opacity: 0;
+}
+
+header #angry {
+  display: none;
 }
 
 header h1 {
@@ -273,7 +291,8 @@ header .star {
   width: 42px;
   height: 42px;
   opacity: 0;
-  fill: var(--secondary);
+  fill: var(--secondary-color);
+  cursor: pointer;
   -webkit-animation: starAnim 8s linear infinite;
           animation: starAnim 8s linear infinite;
 }
@@ -333,13 +352,13 @@ header .socials a svg {
 }
 
 header .socials a svg path {
-  fill: var(--white);
+  fill: var(--primary-color);
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 header .socials a:hover svg path {
-  fill: var(--secondary);
+  fill: var(--secondary-color);
 }
 
 #work {
@@ -442,7 +461,7 @@ header .socials a:hover svg path {
   left: 0;
   height: 1px;
   width: calc(100% - 150px);
-  background-color: var(--white);
+  background-color: var(--primary-color);
   pointer-events: none;
   -webkit-transition: 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -546,14 +565,14 @@ header .socials a:hover svg path {
   left: 0;
   height: 1px;
   width: calc(100% - 150px);
-  background-color: var(--white);
+  background-color: var(--primary-color);
   pointer-events: none;
   -webkit-transition: 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 #about > div .cv a:hover {
-  color: var(--secondary);
+  color: var(--secondary-color);
 }
 
 #about > div .cv a:hover:hover + .line {
@@ -608,7 +627,7 @@ header .socials a:hover svg path {
 }
 
 .contact .circle-container .circle {
-  border: 1px solid var(--white);
+  border: 1px solid var(--primary-color);
   border-radius: 50%;
   width: 100%;
   height: 100%;
@@ -634,7 +653,7 @@ header .socials a:hover svg path {
 }
 
 .contact a {
-  color: var(--secondary);
+  color: var(--secondary-color);
 }
 
 .contact a::after {
@@ -644,7 +663,7 @@ header .socials a:hover svg path {
   bottom: 0;
   height: 1px;
   width: 100%;
-  background: var(--secondary);
+  background: var(--secondary-color);
   overflow: hidden;
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
@@ -703,7 +722,7 @@ footer ul a {
 }
 
 footer ul a:hover {
-  color: var(--secondary);
+  color: var(--secondary-color);
 }
 
 @media screen and (max-width: 600px) {
