--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,13 +2,35 @@ html {
   scroll-behavior: smooth;
 }
 
+:root {
+  --background: #f2f2f2;
+  --primary-color: #333333;
+  --secondary-color: #dbcf89;
+  --secondary-color-alt: #f0e9c0;
+  --font: tenez, serif;
+}
+
+body[data-theme="dark"] {
+  --background: #181818;
+  --primary-color: #f2f2f2;
+
+  #wolf {
+    display: none;
+  }
+
+  #angry {
+    display: block;
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   background-color: var(--background);
   font-family: var(--font);
-  color: var(--white);
+  color: var(--primary-color);
+  transition: color 0.4s, background-color 0.4s, fill 0.4s;
 }
 
 *,
@@ -19,24 +41,13 @@ body {
 }
 
 ::-moz-selection {
-  background: var(--secondary_alt);
+  background: var(--secondary-color-alt);
   color: whitesmoke;
 }
 
 ::selection {
-  background: var(--secondary_alt);
+  background: var(--secondary-color-alt);
   color: whitesmoke;
-}
-
-:root {
-  //   --background: #141414;
-  --background: #181818;
-  --white: #eeeeee;
-  --black: #333333;
-  //   --secondary: #e0d7a1;
-  --secondary: #f93700;
-  --secondary_alt: #ff501e;
-  --font: tenez, serif;
 }
 
 // Basics
@@ -98,12 +109,12 @@ nav {
     z-index: 2;
 
     &:hover {
-      color: var(--secondary);
+      color: var(--secondary-color);
     }
   }
 
   .current {
-    color: var(--secondary);
+    color: var(--secondary-color);
   }
 
   div:nth-child(1) {
@@ -114,7 +125,7 @@ nav {
 
     svg g {
       font-size: 30px;
-      fill: var(--white);
+      fill: var(--primary-color);
     }
   }
 
@@ -169,7 +180,7 @@ header {
     width: 45vw;
 
     .circle {
-      border: 1px solid var(--white);
+      border: 1px solid var(--primary-color);
       border-radius: 50%;
       width: 100%;
       height: 100%;
@@ -185,7 +196,7 @@ header {
     transform: translateX(-50%) scaleY(0);
     width: 1px;
     height: 100vh;
-    background-color: var(--white);
+    background-color: var(--primary-color);
     opacity: 0.1;
   }
 
@@ -196,7 +207,7 @@ header {
     transform: scaleX(0);
     width: 100vw;
     height: 1px;
-    background-color: var(--white);
+    background-color: var(--primary-color);
     opacity: 0.1;
   }
 
@@ -206,7 +217,7 @@ header {
       height: 85vw;
       width: 85vw;
     }
-  
+
     .horizontal-line {
       top: 50vh;
     }
@@ -218,6 +229,10 @@ header {
     pointer-events: none;
     z-index: 1;
     opacity: 0;
+  }
+
+  #angry {
+    display: none;
   }
 
   h1 {
@@ -250,7 +265,8 @@ header {
     width: 42px;
     height: 42px;
     opacity: 0;
-    fill: var(--secondary);
+    fill: var(--secondary-color);
+    cursor: pointer;
     animation: starAnim 8s linear infinite;
   }
 
@@ -286,13 +302,13 @@ header {
       max-height: 30px;
 
       path {
-        fill: var(--white);
+        fill: var(--primary-color);
         transition: 0.3s;
       }
     }
 
     a:hover svg path {
-      fill: var(--secondary);
+      fill: var(--secondary-color);
     }
   }
 }
@@ -376,7 +392,7 @@ header {
           left: 0;
           height: 1px;
           width: calc(100% - 150px);
-          background-color: var(--white);
+          background-color: var(--primary-color);
           pointer-events: none;
           transition: 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
         }
@@ -469,13 +485,13 @@ header {
         left: 0;
         height: 1px;
         width: calc(100% - 150px);
-        background-color: var(--white);
+        background-color: var(--primary-color);
         pointer-events: none;
         transition: 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       }
 
       a:hover {
-        color: var(--secondary);
+        color: var(--secondary-color);
 
         &:hover + .line {
           width: 100%;
@@ -491,8 +507,8 @@ header {
     flex-direction: column-reverse;
 
     h1 {
-    margin-bottom: 0.3em;
-  }
+      margin-bottom: 0.3em;
+    }
 
     & > div {
       margin-left: 0;
@@ -530,7 +546,7 @@ header {
     width: 45vw;
 
     .circle {
-      border: 1px solid var(--white);
+      border: 1px solid var(--primary-color);
       border-radius: 50%;
       width: 100%;
       height: 100%;
@@ -554,7 +570,7 @@ header {
   }
 
   a {
-    color: var(--secondary);
+    color: var(--secondary-color);
 
     &::after {
       content: "";
@@ -563,7 +579,7 @@ header {
       bottom: 0;
       height: 1px;
       width: 100%;
-      background: var(--secondary);
+      background: var(--secondary-color);
       overflow: hidden;
       transform: scaleX(1);
       transform-origin: left;
@@ -603,7 +619,7 @@ footer {
       transition: color 0.3s;
 
       &:hover {
-        color: var(--secondary);
+        color: var(--secondary-color);
       }
     }
   }
