--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,17 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background-color: var(--background);
+  font-family: var(--font);
+  color: var(--primary-color);
+  -webkit-transition: color 0.3s, background-color 0.3s, fill 0.3s;
+  transition: color 0.3s, background-color 0.3s, fill 0.3s;
+}
+
 :root {
   --background: #f2f2f2;
   --primary-color: #333333;
@@ -21,17 +32,6 @@ body[data-theme="dark"] #wolf {
 
 body[data-theme="dark"] #angry {
   display: block;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  background-color: var(--background);
-  font-family: var(--font);
-  color: var(--primary-color);
-  -webkit-transition: color 0.3s, background-color 0.3s, fill 0.3s;
-  transition: color 0.3s, background-color 0.3s, fill 0.3s;
 }
 
 *,
@@ -126,6 +126,7 @@ nav div:nth-child(1) {
   -webkit-transform: translateY(30px);
           transform: translateY(30px);
   opacity: 0;
+  z-index: 2;
 }
 
 nav div:nth-child(1) svg g {
@@ -391,8 +392,7 @@ header .socials a:hover svg path {
 
 @media screen and (max-width: 414px) {
   #work .project .text {
-    -webkit-transform: translate(-50%, -70%) rotate(180deg);
-            transform: translate(-50%, -70%) rotate(180deg);
+    display: none;
   }
 }
 
