--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,10 +13,9 @@ body {
 }
 
 :root {
-  --background: #f2f2f2;
+  --background: #f1f1f1;
   --primary-color: #333333;
-  --secondary-color: #dbcf89;
-  --secondary-color-alt: #f0e9c0;
+  --secondary-color: #dbc549;
   --font: tenez, serif;
 }
 
@@ -41,12 +40,12 @@ body[data-theme="dark"] {
 }
 
 ::-moz-selection {
-  background: var(--secondary-color-alt);
+  background: var(--secondary-color);
   color: whitesmoke;
 }
 
 ::selection {
-  background: var(--secondary-color-alt);
+  background: var(--secondary-color);
   color: whitesmoke;
 }
 
@@ -106,6 +105,7 @@ nav {
   a {
     cursor: pointer;
     z-index: 2;
+    transition: color 0.3s;
 
     &:hover {
       color: var(--secondary-color);
@@ -226,7 +226,8 @@ header {
   img {
     max-width: 15vw;
     user-select: none;
-    pointer-events: none;
+    cursor: pointer;
+    // pointer-events: none;
     z-index: 1;
     opacity: 0;
   }
