--- a/css/style.scss
+++ b/css/style.scss
@@ -264,10 +264,29 @@ main {
       animation-delay: 0.3s;
     }
     .description {
-      opacity: 0;
-      transform: translateY(10px);
-      animation: fadeIn 0.6s ease forwards;
-      animation-delay: 0.4s;
+      @media (min-width: 1025px) {
+        opacity: 0;
+        transform: translateY(10px);
+        animation: fadeIn 0.6s ease forwards;
+        animation-delay: 0.4s;
+      }
+      .title {
+        @media (max-width: 1024px) {
+          opacity: 0;
+          transform: translateY(calc(-75% + 10px));
+          animation: fadeInBis 0.6s ease forwards;
+          @keyframes fadeInBis {
+            0% {
+              opacity: 0;
+              transform: translateY(calc(-75% + 10px));
+            }
+            100% {
+              opacity: 1;
+              transform: translateY(-75%);
+            }
+          }
+        }
+      }
     }
   }
   @keyframes fadeIn {
