--- a/css/style.scss
+++ b/css/style.scss
@@ -112,9 +112,6 @@ header {
             font-size: 4rem;
             font-weight: normal;
           }
-          &.active {
-            pointer-events: none;
-          }
           span {
             &:first-child {
               font-size: 1.25rem;
@@ -138,6 +135,17 @@ header {
             }
           }
           &:hover {
+            span {
+              &:first-child {
+                &::before {
+                  transform: scaleX(1);
+                  transform-origin: left;
+                }
+              }
+            }
+          }
+          &.active {
+            pointer-events: none;
             span {
               &:first-child {
                 &::before {
