--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,12 @@ h2 {
   margin: 3rem 0 1.5rem;
 }
 
+@media (max-width: 1024px) {
+  h2 {
+    margin: 2rem 0 1rem;
+  }
+}
+
 h3 {
   font-size: 1.25rem;
   margin: 0 0 1rem;
@@ -96,6 +102,7 @@ h3 {
   .wrapper {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
+    gap: 3vw;
   }
 }
 
@@ -114,6 +121,12 @@ header nav ul {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 3rem;
+}
+
+@media (max-width: 1024px) {
+  header nav ul {
+    gap: 2rem;
+  }
 }
 
 header nav ul li a {
@@ -315,81 +328,64 @@ main > div .website a::before {
   }
 }
 
-main figure {
-  opacity: 0;
-  -webkit-animation: fadeIn 0.6s ease forwards;
-          animation: fadeIn 0.6s ease forwards;
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
-}
-
-main > div ul li {
-  opacity: 0;
-  -webkit-transform: translateY(10px);
-          transform: translateY(10px);
-  -webkit-animation: fadeIn 0.6s ease forwards;
-          animation: fadeIn 0.6s ease forwards;
-}
-
-main > div ul li:nth-child(1) {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
-}
-
-main > div ul li:nth-child(2) {
-  -webkit-animation-delay: 0.25s;
-          animation-delay: 0.25s;
-}
-
-main > div ul li:nth-child(3) {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-}
-
-main > div ul li:nth-child(4) {
-  -webkit-animation-delay: 0.35s;
-          animation-delay: 0.35s;
-}
-
-main > div .website {
-  opacity: 0;
-  -webkit-transform: translateY(10px);
-          transform: translateY(10px);
-  -webkit-animation: fadeIn 0.6s ease forwards;
-          animation: fadeIn 0.6s ease forwards;
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-}
-
-main > div .description h3 {
-  opacity: 0;
-  -webkit-transform: translateY(10px);
-          transform: translateY(10px);
-  -webkit-animation: fadeIn 0.6s ease forwards;
-          animation: fadeIn 0.6s ease forwards;
-  -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
-}
-
-@media (max-width: 1024px) {
-  main > div .description h3 {
-    -webkit-transform: translateY(calc(-75% + 10px));
-            transform: translateY(calc(-75% + 10px));
-    -webkit-animation: fadeInBis 0.6s ease forwards;
-            animation: fadeInBis 0.6s ease forwards;
-    -webkit-animation-delay: 0;
-            animation-delay: 0;
+@media (min-width: 1025px) {
+  main figure {
+    opacity: 0;
+    -webkit-animation: fadeIn 0.6s ease forwards;
+            animation: fadeIn 0.6s ease forwards;
+    -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s;
   }
-}
-
-main > div .description p {
-  opacity: 0;
-  -webkit-transform: translateY(10px);
-          transform: translateY(10px);
-  -webkit-animation: fadeIn 0.6s ease forwards;
-          animation: fadeIn 0.6s ease forwards;
-  -webkit-animation-delay: 0.45s;
-          animation-delay: 0.45s;
+  main > div ul li {
+    opacity: 0;
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+    -webkit-animation: fadeIn 0.6s ease forwards;
+            animation: fadeIn 0.6s ease forwards;
+  }
+  main > div ul li:nth-child(1) {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s;
+  }
+  main > div ul li:nth-child(2) {
+    -webkit-animation-delay: 0.25s;
+            animation-delay: 0.25s;
+  }
+  main > div ul li:nth-child(3) {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s;
+  }
+  main > div ul li:nth-child(4) {
+    -webkit-animation-delay: 0.35s;
+            animation-delay: 0.35s;
+  }
+  main > div .website {
+    opacity: 0;
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+    -webkit-animation: fadeIn 0.6s ease forwards;
+            animation: fadeIn 0.6s ease forwards;
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s;
+  }
+  main > div .description h3 {
+    opacity: 0;
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+    -webkit-animation: fadeIn 0.6s ease forwards;
+            animation: fadeIn 0.6s ease forwards;
+    -webkit-animation-delay: 0.4s;
+            animation-delay: 0.4s;
+  }
+  main > div .description p {
+    opacity: 0;
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+    -webkit-animation: fadeIn 0.6s ease forwards;
+            animation: fadeIn 0.6s ease forwards;
+    -webkit-animation-delay: 0.45s;
+            animation-delay: 0.45s;
+  }
 }
 
 @-webkit-keyframes fadeIn {
@@ -415,32 +411,6 @@ main > div .description p {
     opacity: 1;
     -webkit-transform: translateY(0);
             transform: translateY(0);
-  }
-}
-
-@-webkit-keyframes fadeInBis {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(calc(-75% + 10px));
-            transform: translateY(calc(-75% + 10px));
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(-75%);
-            transform: translateY(-75%);
-  }
-}
-
-@keyframes fadeInBis {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(calc(-75% + 10px));
-            transform: translateY(calc(-75% + 10px));
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(-75%);
-            transform: translateY(-75%);
   }
 }
 
