--- a/styles/main/main.css
+++ b/styles/main/main.css
@@ -1,3 +1,39 @@
+.circle-container {
+  position: fixed;
+  top: 50vh;
+  left: 50%;
+  width: 45vw;
+  height: 45vw;
+  transform: translate(-50%, -50%);
+
+  & .circle {
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+  }
+}
+
+.vertical-line {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  width: 1px;
+  height: 100vh;
+  transform-origin: top;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.horizontal-line {
+  position: absolute;
+  top: 60vh;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  transform-origin: left;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -15,7 +51,7 @@
   height: 24px;
   overflow: hidden;
 
-  & > * {
+  &>* {
     position: absolute;
   }
 }
